--- a/src/css/compile/main.css
+++ b/src/css/compile/main.css
@@ -1,7 +1,195 @@
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
 body {
     font-family: var(--ff-work-sans);
     font-size: var(--fs-400);
     color: rgb(var(--clr-dark));
     background-color: rgb(var(--clr-light));
+}
+
+header {
+    background-color: rgb(var(--clr-light));
+}
+
+/* Navigation */
+.navigation {
+    justify-content: center;
+}
+
+.navigation > li {
+    font-weight: 600;
+    padding-bottom: .375em;
+    color: rgb(var(--clr-dark-pink));
+    border-bottom: solid 4px rgb(var(--clr-light));
+}
+
+.navigation > li:hover {
+    color: rgb(var(--clr-light-pink));
+    border-bottom: solid 4px rgb(var(--clr-light-pink));
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+}
+/* Navigation end */
+
+#home > p {
+    font-size: 1.125rem;
+}
+
+h2 {
+    margin-bottom: 1rem;
+}
+
+main {
+    padding-top: 6rem;
+    margin-inline: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.grid-container[id] {
+    min-height: 50vh;
+}
+
+.grid-container > * {
+    max-width: 60ch;
+}
+
+.grid-container[id] > h2 {
+    align-self: end;
+}
+
+.grid-container[id] > div {
+    align-self: start;
+}
+
+.grid-container--home>* {
+    max-width: 35ch;
+}
+
+.grid-container--home {
+    padding-top: 20vh;
+    padding-bottom: 40vh;
+    text-align: center;
+}
+
+.grid-list {
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 2rem;
+    grid-row-gap: 0;
+    margin-top: .5rem;
+}
+
+.grid-list > li{
+    margin-right: 1rem;
+}
+
+.command-icon { 
+    position: relative;
+    padding-left: 2rem;
+}
+
+.command-icon::before {
+    display: inline-block;
+    content: "\F2C6";
+    font-family: 'bootstrap-icons';
+    font-size: var(--fs-400);
+    font-weight: 600;
+    color: rgb(var(--clr-dark-pink));
+    position: absolute;
+    left: 0;
+}
+
+.svg-links > a, .experience-website > a {
+    color: rgb(var(--clr-dark-pink));
+    margin-right: 1rem;
+}
+
+.svg-links > a:hover, .experience-website > a:hover {
+    color: rgb(var(--clr-light-pink));
+}
+
+.experience-info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(var(--clr-dark-pink), .1);
+    border: solid 3px rgb(var(--clr-light-pink));
+    border-radius: .5rem;
+    padding: 0 1rem 1rem 1rem;
+    width: 15rem;
+    height: 22rem;
+    margin: 1rem;
+}
+
+.card:hover {
+    background-color: rgba(var(--clr-dark-pink), .15);
+    border: solid 3px rgba(var(--clr-dark-pink), .7);
+}
+
+.cards {
+    margin-inline: 1rem;
+    margin-top: 2rem;
+}
+
+@media (min-width: 35rem) {
+    .card {
+        height: 26rem;
+        margin: .5rem auto;
+    }
+    
+}
+
+@media (min-width: 40rem) {
+    .card {
+        width: 17rem;
+        height: 25rem;
+    }
+}
+
+@media (min-width: 45rem) {
+    .cards {
+        margin-inline: 3rem;
+    }
+}
+
+.card > p:last-of-type {
+    margin-top: auto;
+    margin-bottom: 1rem;
+    font-size: var(--fs-200);
+    font-weight: 600;
+    color: rgba(var(--clr-dark), .8)
+}
+
+footer {
+    margin-inline: auto;
+    width: 75vw;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+hr { border: solid .5px rgb(var(--clr-light-pink)); }
+
+/* Overwriting slick's styles */
+.slick-prev:before,
+.slick-next:before {
+    font-size: var(--fs-500) !important;
+    color: rgb(var(--clr-dark-pink)) !important;
 }
 
