--- a/src/css/compile/reset.css
+++ b/src/css/compile/reset.css
@@ -10,6 +10,7 @@ html {
     -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
     text-size-adjust: none;
+    scroll-behavior: smooth;
 }
 
 /* Remove default margin in favour of better control in authored CSS */
@@ -22,6 +23,12 @@ p,
 figure,
 blockquote {
     margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul {
+    list-style: none;
+    padding: 0;
 }
 
 /* Set core body defaults */
@@ -47,6 +54,16 @@ h4 {
     text-wrap: balance;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    font-weight: 400;
+}
+
 /* A elements that don't have a class get default styles */
 a:not([class]) {
     text-decoration-skip-ink: auto;
@@ -66,11 +83,6 @@ button{
     font-size: inherit;
 }
 
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-    min-height: 10em;
-}
-
 /* Remove animations for people who've turned them off */
 @media (prefers-reduced-motion: reduce) {
     *,
@@ -81,4 +93,14 @@ textarea:not([rows]) {
         transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
     }
+}
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+div {
+    padding: 0;
+    margin: 0;
 }
