--- a/src/css/compiled.css
+++ b/src/css/compiled.css
@@ -208,6 +208,9 @@ div {
 .uppercase { text-transform: uppercase; }
 .text-center { text-align: center; }
 
+.mb-1 { margin-bottom: 1rem; }
+
+.mb-2 { margin-bottom: 2rem; }
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
 body {
@@ -290,10 +293,22 @@ header {
     border: solid 3px rgb(var(--clr-light-pink));
     border-radius: .5rem;
     padding: 0 1rem 1rem 1rem;
-    width: 15rem;
-    height: 22rem;
+    width: 100%;
+
+    /* height: 22rem; */
     margin: 1rem auto;
     overflow-y: auto;
+    max-width: 60ch;
+    /* position: relative; */
+}
+
+.card .svg-links {
+    /* position: absolute;
+    top: 0.5rem;
+    right: 0rem;
+    z-index: 9999; */
+    margin-top: 1rem;
+    margin-left: auto;
 }
 
 .card:hover {
@@ -303,35 +318,62 @@ header {
 
 .cards {
     margin-inline: 1rem;
-    margin-top: 2rem;
+    width: 15rem;
+    place-self: center;
+}
+
+.card h3 {
+    margin-top: 0;
+}
+
+p.tech {
+    margin-top: .25rem;
+    margin-bottom: 1rem;
+    font-size: var(--fs-200);
+    font-weight: 600;
+    color: rgba(var(--clr-dark), .8);
+    text-align: center;
+}
+
+.card ul > li {
+    font-size: var(--fs-200);
+    font-weight: 400;
+    color: rgba(var(--clr-dark), .8);
+}
+
+.card iframe {
+    align-self: center;
+}
+
+@media (min-width: 20rem) {
+    .cards {
+        /* height: 26rem; */
+        width: 20rem;
+    }
 }
 
 @media (min-width: 35rem) {
-    .card {
-        height: 26rem;
+    .cards {
+        /* height: 26rem; */
+        width: 30rem;
         margin: .5rem auto;
     }
 }
 
 @media (min-width: 40rem) {
-    .card {
-        width: 17rem;
-        height: 25rem;
+    .cards {
+        width: 35rem;
     }
 }
 
-@media (min-width: 45rem) {
+@media (min-width: 55rem) {
+    .card {
+        width: 100%;
+    }
     .cards {
+        width: 45rem;
         margin-inline: 3rem;
     }
-}
-
-.card > p:last-of-type {
-    margin-top: auto;
-    margin-bottom: 1rem;
-    font-size: var(--fs-200);
-    font-weight: 600;
-    color: rgba(var(--clr-dark), .8)
 }
 /* Card end */
 
@@ -349,6 +391,11 @@ header {
     color: rgb(var(--clr-dark-pink));
     position: absolute;
     left: 0;
+}
+
+.command-icon-list.small > li::before {
+    font-size: var(--fs-200);
+    left: 0.5rem;
 }
 
 .experience-info {
