--- a/src/css/compile/utility.css
+++ b/src/css/compile/utility.css
@@ -61,3 +61,7 @@
 
 .uppercase { text-transform: uppercase; }
 .text-center { text-align: center; }
+
+.mb-1 { margin-bottom: 1rem; }
+
+.mb-2 { margin-bottom: 2rem; }
